--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE HTML>
-
+<!--
+	Dimension by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
 	<head>
 		<title>Hammerkiller</title>
@@ -15,8 +19,8 @@
 
 				<!-- Header -->
 					<header id="header">
-						<div class="logo">
-							<span class="icon fa-diamond"></span>
+						<div class="test">
+							<span class="icon"><img src="images/TestLogo.png" alt="" /></span>
 						</div>
 						<div class="content">
 							<div class="inner">
@@ -27,7 +31,7 @@
 						<nav>
 							<ul>
 								 <li><a href="#learnMore">Learn More</a></li>
-								 <li><a href="#Abour">Work</a></li>
+								 <li><a href="#About">About</a></li>
 								<!--<li><a href="#about">About</a></li>
 								<li><a href="#contact">Contact</a></li> -->
 								<!--<li><a href="#elements">Elements</a></li>-->
@@ -47,7 +51,7 @@
 
 						<!-- Work -->
 							<article id="About">
-								<h2 class="major">Work</h2>
+								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 								<p>Hola Como estás</p>
 								<p>Me llamo Sergio y estudio informatica.</p>
