--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Dimension by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>Hammerkiller</title>
@@ -19,7 +15,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<div class="test">
+						<div class="Logo">
 							<span class="icon"><img src="images/TestLogo.png" alt="" /></span>
 						</div>
 						<div class="content">
