--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<div class="Logo">
+						<div class="logo">
 							<span class="icon"><img src="images/TestLogo.png" alt="" /></span>
 						</div>
 						<div class="content">
